--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -2,11 +2,13 @@
     border: none;
     width: 110px;
     height: 40px;
-    color: #FFF;
+    color: #fff;
     font-size: 1rem;
     background-color: $color-dark-grey;
 
-    &:hover, &:active, &:focus {
+    &:hover,
+    &:active,
+    &:focus {
         outline: none;
     }
 
@@ -31,4 +33,19 @@
 
 .btn-green {
     @include btn-standard-animated($color-dark-grey, $color-light-green);
+}
+
+.form-wrap {
+    .form-item-error {
+        color: $color-error;
+        border-bottom: 1px solid $color-error;
+
+        input {
+            color: $color-error;
+        }
+    }
+}
+
+.form-error {
+    color: $color-error;
 }
