--- a/src/views/user/style.scss
+++ b/src/views/user/style.scss
@@ -1,23 +1,51 @@
-@import '@/assets/scss/constants.scss';
-@import '@/assets/scss/common.scss';
+@import "@/assets/scss/constants.scss";
+@import "@/assets/scss/common.scss";
 
 .signin {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color: #FFF;
+    background-color: #fff;
     justify-content: center;
     align-items: center;
 }
 
+.form-item {
+    display: flex;
+    width: 100%;
+    margin: 10px 0;
+    font-size: 20px;
+    border-bottom: 1px solid $color-dark-blue;
+}
+
 .back-btn {
     @extend .btn-standard;
-    
+
     position: absolute;
     top: 50px;
     left: 50px;
     background-color: $color-light-green;
     border-radius: 20px;
+}
+
+.form-item {
+    label {
+        margin-right: 10px;
+    }
+
+    input {
+        flex-grow: 1;
+        border: none;
+        font-size: 22px;
+        color: $color-dark-blue;
+
+        &:hover,
+        &:active,
+        &:focus {
+            border: none;
+            outline: none;
+        }
+    }
 }
 
 .form-wrap {
@@ -42,30 +70,6 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-
-        .form-item {
-            display: flex;
-            width: 100%;
-            margin: 10px 0;
-            font-size: 20px;
-            border-bottom: 1px solid $color-dark-blue;
-
-            label {
-                margin-right: 10px;
-            }
-
-            input {
-                flex-grow: 1;
-                border: none;
-                font-size: 22px;
-                color: $color-dark-blue;
-
-                &:hover, &:active, &:focus {
-                    border: none;
-                    outline: none;
-                }
-            }
-        }
 
         .btn-submit {
             align-self: flex-end;
