--- a/src/views/user/style.scss
+++ b/src/views/user/style.scss
@@ -1,7 +1,7 @@
 @import "@/assets/scss/constants.scss";
 @import "@/assets/scss/common.scss";
 
-.signin {
+.signin, .signup {
     position: absolute;
     width: 100vw;
     height: 100vh;
